# ai-agents-orchestrator

./: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.mcp.yml  docker-compose.yml  pyproject.toml
docs/architecture/: ai-driven-development-sequence.puml  basie-jira-based-workflow_sequence.md  project_architecture.md  workflow_sequence.md
docs/guidelines/: mcp_connection_guide.md
examples/: basic_mcp_connection.py
src/ai_orchestrator/: __init__.py  config.py  domain.py  orchestrator.py
src/ai_orchestrator/api/: __init__.py  webhooks.py
src/ai_orchestrator/application/: __init__.py  controllers.py
src/ai_orchestrator/domain/: __init__.py  issue_entity.py  mcp_startup_service.py  models.py  orchestrator_service.py  repositories.py  services.py
src/ai_orchestrator/infra/: __init__.py  app.py  config.py  di.py  jira_client.py  llm_repository_openhands.py  logging_config.py
