[project]
name = "ai-orchestrator"
version = "0.1.0"
description = "AI Orchestrator for OpenHands with MCP integration for Jira and Confluence"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openhands-sdk>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "dependency-injector>=4.41.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

